maybe fix modal icon mobile

--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -136,7 +136,7 @@ p > a {
 
   .titanic-menu-close {
     top: 40px;
-    right: -140px;
+    right: -120px;
     margin: 0px
   }
 }
